fix badge overlap issue on projects page

--- a/css/blog.css
+++ b/css/blog.css
@@ -103,7 +103,6 @@ img {
     margin: 1em;
     background: #fff;
     border-radius: 2px;
-    height: 320px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     transition: all 0.2s ease-in-out;
 }
@@ -141,11 +140,12 @@ img {
 }
 
 .post-category {
-    margin: 0 0.1em;
+    margin: 0.2em 0.1em;
     padding: 0.3em 1em;
     color: #fff;
     background: #999;
     font-size: 80%;
+    display: inline-block;
 }
     .post-category-design {
         background: #5aba59;
@@ -190,7 +190,7 @@ img {
     }
 
     .reading-area {
-      width: 75%;
+      width: 80%;
     }
 
     .header {
